# netresolve

./: .gitignore  .travis.yml  .vimrc  COPYING  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  wrapresolve
backends/: any.c  aresdns.c  asyncns.c  avahi.c  dns.c  exec.c  getaddrinfo.c  hostname.c  hosts.c  libc.c  loopback.c  nss.c  numerichost.c  ubdns.c  unix.c
compat/: asyncns.c  compat.c  getaddrinfo_a.c  libc.c  netresolve-compat.h  nsswitch.c
contrib/dnssec/patches/: glibc.patch
contrib/rpm/: build-rpm.sh  netresolve.spec
include/: netresolve-backend.h  netresolve-callback.h  netresolve-cli.h  netresolve-common.h  netresolve-compat.h  netresolve-epoll.h  netresolve-event.h  netresolve-glib.h  netresolve-nonblock.h  netresolve-private.h  netresolve-select.h  netresolve-socket.h  netresolve-string.h  netresolve-utils.h  netresolve.h
lib/: .gitignore  backend.c  channel.c  cli.c  compat.c  context.c  epoll.c  event.c  getaddrinfo.c  input.c  logging.c  netresolve-backend.h  netresolve-cli.h  netresolve-private.h  netresolve-string.h  output.c  posix.c  query.c  request.c  resolver.c  response.c  select.c  service.c  services.c  socket.c  string.c  utils.c
tests/: common.c  common.h  test-async-epoll.c  test-async-select.c  test-async.c  test-asyncns-cancel.c  test-asyncns.c  test-bind-connect.c  test-compat.sh  test-dns.sh  test-dnssec.sh  test-getaddrinfo.c  test-gethostbyname.c  test-glib.c  test-libevent.c  test-netresolve.sh  test-sync.c
tests/data/: any  any-listing  dns  dns-srv  dns-srv-udp  empty  failed  getaddrinfo  gethostbyaddr  gethostbyname  getnameinfo  localhost  localhost-http  localhost-listing  localhost4  localhost4-http  localhost6  localhost6-http  numeric4  numeric4failed  numeric4lo  numeric4nines  numeric6  numeric6failed  numeric6ifindex  numeric6lo  numeric6nines  services  unix  unix-dgram  unix-stream
tests/data/dns/: dns-forward  dns-reverse  dns-srv-fallback
tests/data/dnssec/: dns-forward  dns-reverse
tools/: common.c  compat.c  compat.h  getaddrinfo.c  gethostbyaddr.c  gethostbyname.c  getnameinfo.c  netconnect.c  netresolve.c  res_query.c  wrapper.sh  wrapresolve.in
